--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!--Probando commit  -->
-<header>
-<div>
-  <h1>Hola mundo</h1>
-</div>
-</header>
+<body>
+  <header>
+    <div>
+      <h1>Hola mundo</h1>
+    </div>
+  </header>
+</body>
