--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <header>
     <div>
       <h1>Hola mundo</h1>
+      <h2>Hello world</h2>
     </div>
+    <section></section>
   </header>
 </body>
