--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
       <h1>Hola mundo</h1>
       <h2>Hello world</h2>
     </div>
-    <section></section>
+    <section>
+      <p>Probandooo</p>
+    </section>
+    <article>
+      <p>fgerytre</p>
+    </article>
   </header>
 </body>
