--- a/index.html
+++ b/index.html
@@ -11,5 +11,12 @@
     <article>
       <p>fgerytre</p>
     </article>
+    <nav>
+      <ul>
+        <li>
+          <a>prueba</a>
+        </li>
+      </ul>
+    </vav>
   </header>
 </body>
