--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
       <h1>Hola mundo</h1>
       <h2>Hello world</h2>
     </div>
+  </header>
+  <main>
     <section>
       <p>Probandooo</p>
     </section>
     <article>
       <p>fgerytre</p>
     </article>
-  </header>
+  </main>
+  <footer>
+    <p>fgerytre</p>
+  </footer>
 </body>
